finishing the 2nd part

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
     <h1>Custom <span>Date</span> Picker</h1>
     <div class="date-picker">
-        <div class="selected-date"></div>
+        <div class="selected-date">01/12/2024</div>
 
-        <div class="dates">
+        <div class="dates active">
             <div class="month">
                 <div class="arrows prev-mth">&lt;</div>
-                <div class="mth"></div>
+                <div class="mth">december 2023</div>
                 <div class="arrows next-mth">&gt;</div>
             </div>
 
-            <div class="days"></div>
+            <div class="days">
+                
+            </div>
         </div>
     </div>
 </body>
