--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="date-picker">
         <div class="selected-date">01/12/2024</div>
 
-        <div class="dates active">
+        <div class="dates">
             <div class="month">
                 <div class="arrows prev-mth">&lt;</div>
                 <div class="mth">december 2023</div>
